--- a/src/reports/report.css
+++ b/src/reports/report.css
@@ -51,6 +51,10 @@ ul {
   margin-bottom: 10px;
 }
 
+.filter .btn {
+  margin-top: -45px;
+}
+
 .export {
   float: left;
   width: 20%;
@@ -59,6 +63,10 @@ ul {
 .export > button {
   margin-top: 4px;
   margin-right: 10px;
+}
+
+.tools {
+  height: 55px;
 }
 
 @media print {
